INTERNAL: mapping hsbc decision + alert metadata (ALL-154)
Closes ALL-154

Merged from: https://gitlab.silenteight.com/hsbc-bank/hsbc-bridge/-/merge_requests/160
